maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
while (!estFaceMur) {avance}
gauche()
while (!estSurBiscuit) {
	droite()
	if (estfaceMur) {
		gauche()
		if (estfaceMur) gauche() else avance()
	}

	
}
